# SCAMER

./: LICENSE  README.md  SCAMER.py
.github/workflows/: docker.yml
files/: Dockerfile  pyproject.toml  requirements.txt
