[build-system]
requires = [
    "setuptools>=58.0.4",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "SCAMER"
version = "1.1.3"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Munawar9488/SCAMER/"
include = ["README.md", "LICENSE", "files/email.json"]
description = "A python phishing script for login phishing, image phishing, video phishing and many more"
authors = ["Munawar<Munawarmujahid3749@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.3.0"
rich = "^13.0.0"

[tool.poetry.scripts]
SCAMER = "SCAMER:main"

[build-system.sdist]
formats = ["gztar"]

[build-system.bdist_wheel]
universal = false